tests/ui/attr_invalid_int_type.stderr
error: Invalid IntType: f32. Supported types are i8, u8, i16, u16, i32, u32, i64, u64, i128, u128, isize, usize
 --> tests/ui/attr_invalid_int_type.rs:3:25
  |
3 | #[enum_extend(IntType = "f32")]
  |                         ^^^^^
